feat: hardware-sympathetic pipeline execution
Adds physical core awareness, off-heap buffer support, and JVM memory
pressure backpressure. All additions are generic pipeline primitives with
no domain-specific coupling.

Hardware introspection (io.heddle.util.Hardware)
- physicalCores(): availableProcessors() captured at class-load, used as
  the upper bound for CPU-bound concurrency
- cacheLineBytes(): 64 bytes, for false-sharing padding of hot fields
- recommendedGcThreads(): max(1, cores / 4), safe GC thread cap that
  leaves physical cores available for VT carrier threads

mapAsync concurrency cap (Pipeline)
- mapAsync(fn) no-arg overload defaults to Hardware.physicalCores()
- mapAsync(fn, n) now throws IllegalArgumentException if n exceeds the
  physical core count; error message explains the cache-thrashing
  mechanism and points to flatMap() for I/O-bound work where VTs park
  their carrier on blocking calls and the core limit does not apply

Off-heap contiguous buffers (io.heddle.buffer.NativeBuffer)
- Wraps java.lang.foreign.MemorySegment with a shared Arena so any VT
  across stage boundaries can read/write without restriction
- Factory methods: allocateBytes, allocateInts, allocateLongs, fromInts,
  fromLongs, fromBytes
- Typed accessors: getInt/setInt, getLong/setLong, getByte/setByte
- slice() returns a sub-view sharing the parent's arena and lifetime
- AutoCloseable; close() on a slice is a no-op

JVM memory pressure backpressure (io.heddle.memory.MemoryGuard)
- Monitors heap headroom via Runtime.getRuntime() (java.base only, no
  module dependency)
- isPressured() returns true when free heap fraction falls below threshold
- awaitHeadroom() parks the calling VT (releasing its carrier) while
  polling at configurable intervals, giving the GC unobstructed access to
  freed physical cores
- Default: 20% free-heap threshold, 50 ms poll interval
- Wired into AdmissionController.acquire() so the check is automatic on
  every child-VT spawn with no changes req